--- a/Alicargo/Web.Release.config
+++ b/Alicargo/Web.Release.config
@@ -1,12 +1,18 @@
 ﻿<?xml version="1.0"?>
+
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 	<connectionStrings>
-		<add  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_1_1;Integrated Security=True;" providerName="System.Data.SqlClient" />
+		<add xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="MainConnectionString"
+				 connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_1_1;Integrated Security=True;"
+				 providerName="System.Data.SqlClient" />
 	</connectionStrings>
+	<appSettings>
+		<add xdt:Transform="SetAttributes" xdt:Locator="Match(name)" key="JobPausePeriod" value="00:01:00" />
+	</appSettings>
 	<system.net>
 		<mailSettings xdt:Transform="Replace">
 			<smtp deliveryMethod="Network" from="robot@alicargo.ru">
-				<network host="smtp.gmail.com" enableSsl="true"	userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587" />
+				<network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587" />
 			</smtp>
 		</mailSettings>
 	</system.net>
