--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\Alicargo.BlackBox.Tests\packages.config" />
   <repository path="..\Alicargo.Core.Tests\packages.config" />
   <repository path="..\Alicargo.DataAccess.BlackBox.Tests\packages.config" />
+  <repository path="..\Alicargo.Jobs.Tests\packages.config" />
   <repository path="..\Alicargo.TestHelpers\packages.config" />
   <repository path="..\Alicargo.Tests\packages.config" />
   <repository path="..\Alicargo\packages.config" />
