--- a/Alicargo.DataAccess/Alicargo.DataAccess.csproj
+++ b/Alicargo.DataAccess/Alicargo.DataAccess.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Repositories\ClientRepository.cs" />
     <Compile Include="Repositories\CountryRepository.cs" />
     <Compile Include="Repositories\AwbRepository.cs" />
+    <Compile Include="Repositories\ClientFileRepository.cs" />
     <Compile Include="Repositories\SenderRepository.cs" />
     <Compile Include="Repositories\StateRepository.cs" />
     <Compile Include="Repositories\TransitRepository.cs" />
