--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calculation\CalculationExcelRow.cs" />
+    <Compile Include="Calculation\CalculationJobHepler.cs" />
     <Compile Include="Calculation\ClientExcelUpdaterJob.cs" />
     <Compile Include="Calculation\CalculationMailer.cs" />
     <Compile Include="Calculation\ICalculationMailer.cs" />
