--- a/Alicargo.DataAccess.BlackBox.Tests/Alicargo.DataAccess.BlackBox.Tests.csproj
+++ b/Alicargo.DataAccess.BlackBox.Tests/Alicargo.DataAccess.BlackBox.Tests.csproj
@@ -89,8 +89,8 @@
     <Compile Include="Helpers\DbTestContext.cs" />
     <Compile Include="Repositories\Tests.StateRepository.cs" />
     <Compile Include="Repositories\AwbRepositoryTests.cs" />
-    <Compile Include="Repositories\Tests.BrockerRepository.cs" />
-    <Compile Include="Repositories\Tests.CarrierRepository.cs" />
+    <Compile Include="Repositories\BrockerRepositoryTests.cs" />
+    <Compile Include="Repositories\CarrierRepositoryTests.cs" />
     <Compile Include="Repositories\Tests.ClientRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ApplicationRepositoryTests.cs" />
@@ -102,6 +102,7 @@
     </Compile>
     <Compile Include="Repositories\AuthenticationRepositoryTests.cs" />
     <Compile Include="Repositories\CalculationRepositoryTests.cs" />
+    <Compile Include="Repositories\ClientContractRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Alicargo.Contracts\Alicargo.Contracts.csproj">
