--- a/Alicargo/Web.Dev.config
+++ b/Alicargo/Web.Dev.config
@@ -1,7 +1,13 @@
 ﻿<?xml version="1.0"?>
+
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 	<connectionStrings>
-		<add  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Dev;Integrated Security=True;" providerName="System.Data.SqlClient" />
+		<add xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="MainConnectionString"
+				 connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo.Dev;Integrated Security=True;"
+				 providerName="System.Data.SqlClient" />
+		<add xdt:Transform="SetAttributes" xdt:Locator="Match(name)"
+				 connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo.Files.Dev;Integrated Security=True"
+				 name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings>
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="JobPausePeriod" value="00:00:10" />
