--- a/Alicargo/Web.Release.config
+++ b/Alicargo/Web.Release.config
@@ -5,6 +5,9 @@
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="MainConnectionString"
 				 connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_1_1;Integrated Security=True;"
 				 providerName="System.Data.SqlClient" />
+		<add xdt:Transform="SetAttributes" xdt:Locator="Match(name)"
+				 connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo.Files.1_1;Integrated Security=True"
+				 name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings>
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="JobPausePeriod" value="00:00:30" />
