--- a/Alicargo.Contracts/Alicargo.Contracts.csproj
+++ b/Alicargo.Contracts/Alicargo.Contracts.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Enums\RoleType.cs" />
     <Compile Include="Enums\TwoLetterISOLanguageName.cs" />
     <Compile Include="Exceptions\AccessForbidenException.cs" />
+    <Compile Include="Exceptions\DublicateLoginException.cs" />
     <Compile Include="Exceptions\DublicateException.cs" />
     <Compile Include="Exceptions\EntityUpdateConflict.cs" />
     <Compile Include="Exceptions\EntityNotFoundException.cs" />
