--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -152,6 +152,8 @@
   <ItemGroup>
     <Compile Include="Controllers\ClientCalculationController.cs" />
     <Compile Include="MvcHelpers\ModelBinders\ClientModelBinder.cs" />
+    <Compile Include="Services\Abstract\IClientCalculationPresenter.cs" />
+    <Compile Include="Services\Calculation\ClientCalculationPresenter.cs" />
     <Compile Include="T4MVC\AirWaybillController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
