--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -620,6 +620,7 @@
     <Content Include="Content\themes\jMetro\images\ui-icons_d4d4d4_0.png" />
     <Content Include="Content\themes\jMetro\images\ui-icons_ffffff_0.png" />
     <Content Include="Content\themes\jMetro\jquery-ui.css" />
+    <Content Include="Deploy\Install\Sql\create-files-db.sql" />
     <Content Include="Deploy\Install\Sql\create-sp-for-backup-db.sql" />
     <Content Include="Deploy\Install\Sql\set-initial-data.sql" />
     <Content Include="Deploy\Install\Sql\create-sp-restore-db.sql" />
