--- a/Alicargo.Contracts/Alicargo.Contracts.csproj
+++ b/Alicargo.Contracts/Alicargo.Contracts.csproj
@@ -45,6 +45,9 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Alicargo\Properties\ProjectInfo.cs">
+      <Link>Properties\ProjectInfo.cs</Link>
+    </Compile>
     <Compile Include="Contracts\AirWaybillAggregate.cs" />
     <Compile Include="Contracts\ApplicationData.cs" />
     <Compile Include="Contracts\ApplicationDetailsData.cs" />
