moved DynamicScripts to _Layout

--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -1513,7 +1513,7 @@
     <Content Include="Views\ApplicationList\SenderTemplate.cshtml" />
     <Content Include="Views\ApplicationList\ClientTemplate.cshtml" />
     <Content Include="Views\ApplicationList\ClientDetails.cshtml" />
-    <Content Include="Views\DynamicScript\Index.cshtml" />
+    <Content Include="Views\Shared\DynamicScripts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
