--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -153,7 +153,9 @@
     <Compile Include="MvcHelpers\ModelBinders\ClientModelBinder.cs" />
     <Compile Include="Properties\ProjectInfo.cs" />
     <Compile Include="Services\Abstract\IClientCalculationPresenter.cs" />
+    <Compile Include="Services\Abstract\ISenderService.cs" />
     <Compile Include="Services\Calculation\ClientCalculationPresenter.cs" />
+    <Compile Include="Services\Users\SenderService.cs" />
     <Compile Include="T4MVC\AirWaybillController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
