--- a/Alicargo.DataAccess/Alicargo.DataAccess.csproj
+++ b/Alicargo.DataAccess/Alicargo.DataAccess.csproj
@@ -68,6 +68,7 @@
     </Compile>
     <Compile Include="DbContext\DebugTextWriter.cs" />
     <Compile Include="DbContext\SqlError.cs" />
+    <Compile Include="DbContext\SqlExceptionsHelper.cs" />
     <Compile Include="DbContext\Transaction.cs" />
     <Compile Include="DbContext\UnitOfWork.cs" />
     <Compile Include="Helpers\ApplicationRepositoryOrderer.cs" />
