--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -151,12 +151,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\ClientCalculationController.cs" />
+    <Compile Include="Controllers\SenderCalculationController.cs" />
     <Compile Include="Controllers\SenderController.cs" />
     <Compile Include="MvcHelpers\ModelBinders\ClientModelBinder.cs" />
     <Compile Include="Properties\ProjectInfo.cs" />
+    <Compile Include="Services\Abstract\ISenderCalculationPresenter.cs" />
     <Compile Include="Services\Abstract\IClientCalculationPresenter.cs" />
     <Compile Include="Services\Abstract\ISenderService.cs" />
     <Compile Include="Services\Calculation\ClientCalculationPresenter.cs" />
+    <Compile Include="Services\Calculation\SenderCalculationPresenter.cs" />
     <Compile Include="Services\Users\SenderService.cs" />
     <Compile Include="T4MVC\AirWaybillController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
@@ -292,7 +295,7 @@
     <Compile Include="Services\Abstract\IAuthenticationService.cs" />
     <Compile Include="Services\Abstract\IAwbUpdateManager.cs" />
     <Compile Include="Services\Abstract\IAwbPresenter.cs" />
-    <Compile Include="Services\Abstract\ICalculationPresenter.cs" />
+    <Compile Include="Services\Abstract\IAdminCalculationPresenter.cs" />
     <Compile Include="Services\Abstract\ICalculationService.cs" />
     <Compile Include="Services\Abstract\ICarrierService.cs" />
     <Compile Include="Services\Abstract\IClientManager.cs" />
@@ -314,7 +317,7 @@
     <Compile Include="Services\Application\ApplicationListPresenter.cs" />
     <Compile Include="Services\Abstract\IApplicationAwbManager.cs" />
     <Compile Include="Services\Application\ApplicationSenderManager.cs" />
-    <Compile Include="Services\Calculation\CalculationPresenter.cs" />
+    <Compile Include="Services\Calculation\AdminAdminCalculationPresenter.cs" />
     <Compile Include="Services\Users\Client\ClientPermissions.cs" />
     <Compile Include="Services\Users\Client\ClientPresenter.cs" />
     <Compile Include="Services\Abstract\IClientPermissions.cs" />
@@ -349,6 +352,9 @@
     <Compile Include="Services\StateService.cs" />
     <Compile Include="Services\TransitService.cs" />
     <Compile Include="Services\Users\UserService.cs" />
+    <Compile Include="T4MVC\SenderCalculationController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="T4MVC\SenderController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
@@ -370,12 +376,12 @@
     <Compile Include="ViewModels\AirWaybill\AwbSenderModel.cs" />
     <Compile Include="ViewModels\Application\ApplicationGroup.cs" />
     <Compile Include="ViewModels\Application\ApplicationListItem.cs" />
-    <Compile Include="ViewModels\Calculation\CalculationGroup.cs" />
+    <Compile Include="ViewModels\Calculation\Admin\CalculationGroup.cs" />
     <Compile Include="ViewModels\Calculation\CalculationHelper.cs" />
-    <Compile Include="ViewModels\Calculation\CalculationListCollection.cs" />
-    <Compile Include="ViewModels\Calculation\ClientCalculationListCollection.cs" />
-    <Compile Include="ViewModels\Calculation\ClientCalculationGroup.cs" />
-    <Compile Include="ViewModels\Calculation\ClientCalculationItem.cs" />
+    <Compile Include="ViewModels\Calculation\Admin\CalculationListCollection.cs" />
+    <Compile Include="ViewModels\Calculation\Client\ClientCalculationListCollection.cs" />
+    <Compile Include="ViewModels\Calculation\Client\ClientCalculationGroup.cs" />
+    <Compile Include="ViewModels\Calculation\Client\ClientCalculationItem.cs" />
     <Compile Include="ViewModels\DynamicScriptMethodDescription.cs" />
     <Compile Include="ViewModels\Helpers\ApplicationHelper.cs" />
     <Compile Include="ViewModels\Application\ApplicationSenderModel.cs" />
@@ -385,8 +391,8 @@
     <Compile Include="ViewModels\CurrencyModel.cs" />
     <Compile Include="ViewModels\AuthenticationModel.cs" />
     <Compile Include="ViewModels\AirWaybill\AwbBrokerModel.cs" />
-    <Compile Include="ViewModels\Calculation\CalculationAwbInfo.cs" />
-    <Compile Include="ViewModels\Calculation\CalculationItem.cs" />
+    <Compile Include="ViewModels\Calculation\Admin\CalculationAwbInfo.cs" />
+    <Compile Include="ViewModels\Calculation\Admin\CalculationItem.cs" />
     <Compile Include="ViewModels\CargoIsCustomsClearedButtonModel.cs" />
     <Compile Include="ViewModels\User\ClientModel.cs" />
     <Compile Include="ViewModels\TransitEditModel.cs" />
@@ -645,6 +651,8 @@
     <Content Include="Scripts\app\Calculation\Admin\Grid.js" />
     <Content Include="Scripts\app\Calculation\Client\Columns.js" />
     <Content Include="Scripts\app\Calculation\Client\Grid.js" />
+    <Content Include="Scripts\app\Calculation\Sender\Columns.js" />
+    <Content Include="Scripts\app\Calculation\Sender\Grid.js" />
     <Content Include="Scripts\app\Client\Grid.js" />
     <Content Include="Scripts\app\Common.js" />
     <Content Include="Scripts\app\it.js" />
@@ -1524,6 +1532,7 @@
     <Content Include="Views\Sender\Create.cshtml" />
     <Content Include="Views\Sender\Edit.cshtml" />
     <Content Include="Views\Sender\EditorTemplates\SenderModel.cshtml" />
+    <Content Include="Views\SenderCalculation\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
