--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -382,9 +382,10 @@
     <Compile Include="ViewModels\Calculation\Client\ClientCalculationListCollection.cs" />
     <Compile Include="ViewModels\Calculation\Client\ClientCalculationGroup.cs" />
     <Compile Include="ViewModels\Calculation\Client\ClientCalculationItem.cs" />
-    <Compile Include="ViewModels\Calculation\Sender\ClientCalculationGroup.cs" />
-    <Compile Include="ViewModels\Calculation\Sender\ClientCalculationItem.cs" />
-    <Compile Include="ViewModels\Calculation\Sender\ClientCalculationListCollection.cs" />
+    <Compile Include="ViewModels\Calculation\Sender\SenderCalculationAwbInfo.cs" />
+    <Compile Include="ViewModels\Calculation\Sender\SenderCalculationGroup.cs" />
+    <Compile Include="ViewModels\Calculation\Sender\SenderCalculationItem.cs" />
+    <Compile Include="ViewModels\Calculation\Sender\SenderCalculationListCollection.cs" />
     <Compile Include="ViewModels\DynamicScriptMethodDescription.cs" />
     <Compile Include="ViewModels\Helpers\ApplicationHelper.cs" />
     <Compile Include="ViewModels\Application\ApplicationSenderModel.cs" />
@@ -1536,6 +1537,7 @@
     <Content Include="Views\Sender\Edit.cshtml" />
     <Content Include="Views\Sender\EditorTemplates\SenderModel.cshtml" />
     <Content Include="Views\SenderCalculation\Index.cshtml" />
+    <Content Include="Views\SenderCalculation\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
