--- a/Alicargo.BlackBox.Tests/packages.config
+++ b/Alicargo.BlackBox.Tests/packages.config
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AspNetMvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="AutoFixture" version="3.12.1" targetFramework="net45" />
   <package id="Dapper" version="1.13" targetFramework="net45" />
   <package id="EmitMapper" version="1.0.0" targetFramework="net45" />
   <package id="FluentAssertions" version="2.1.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moq" version="4.1.1309.1617" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
