--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Services\Abstract\ISenderService.cs" />
     <Compile Include="Services\Calculation\ClientCalculationPresenter.cs" />
     <Compile Include="Services\Calculation\SenderCalculationPresenter.cs" />
+    <Compile Include="Services\Excel\Rows\BaseApplicationExcelRow.cs" />
     <Compile Include="Services\Users\SenderService.cs" />
     <Compile Include="T4MVC\AirWaybillController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
@@ -326,12 +327,12 @@
     <Compile Include="Services\Abstract\IClientPresenter.cs" />
     <Compile Include="Services\Email\AwbManagerWithMailing.cs" />
     <Compile Include="Services\Email\Recipients.cs" />
-    <Compile Include="Services\Excel\AdminApplicationExcelRow.cs" />
+    <Compile Include="Services\Excel\Rows\AdminApplicationExcelRow.cs" />
     <Compile Include="Services\Excel\ApplicationExcelRowSource.cs" />
     <Compile Include="Services\Excel\ExcelGenerator.cs" />
     <Compile Include="Services\Abstract\IApplicationExcelRowSource.cs" />
-    <Compile Include="Services\Excel\ForwarderApplicationExcelRow.cs" />
-    <Compile Include="Services\Excel\SenderApplicationExcelRow.cs" />
+    <Compile Include="Services\Excel\Rows\ForwarderApplicationExcelRow.cs" />
+    <Compile Include="Services\Excel\Rows\SenderApplicationExcelRow.cs" />
     <Compile Include="Services\LocalizationService.cs" />
     <Compile Include="Services\AirWaybill\AwbUpdateManager.cs" />
     <Compile Include="Services\Email\ApplicationManagerWithMailing.cs" />
