--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -639,6 +639,7 @@
     <Content Include="Content\themes\jMetro\images\ui-icons_d4d4d4_0.png" />
     <Content Include="Content\themes\jMetro\images\ui-icons_ffffff_0.png" />
     <Content Include="Content\themes\jMetro\jquery-ui.css" />
+    <Content Include="Deploy\app_offline.htm" />
     <Content Include="Deploy\Install\Sql\create-files-db.sql" />
     <Content Include="Deploy\Install\Sql\create-sp-for-backup-db.sql" />
     <Content Include="Deploy\Install\Sql\db_1_1.sql" />
@@ -648,6 +649,7 @@
     <Content Include="Deploy\testing.txt" />
     <Content Include="Deploy\Update\1_1_To_2_0.sql" />
     <Content Include="Deploy\Update\Plan.txt" />
+    <Content Include="Deploy\Update\restore-db.sql" />
     <Content Include="Scripts\app\AirWaybill\Columns.js" />
     <Content Include="Scripts\app\AirWaybill\Grid.js" />
     <Content Include="Scripts\app\Alicargo.js" />
