moved to win 2012  and vs 2013

--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -21,8 +21,8 @@
 		<add key="JobPausePeriod" value="00:00:05" />
 	</appSettings>
 	<connectionStrings>
-		<add connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True" name="MainConnectionString" providerName="System.Data.SqlClient" />
-		<add connectionString="Data Source=.\;Initial Catalog=Alicargo.Files;Integrated Security=True" name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
+		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" name="MainConnectionString" providerName="System.Data.SqlClient" />
+		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo.Files;Integrated Security=True" name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<system.net>
 		<mailSettings>
@@ -97,18 +97,6 @@
 	</log4net>
 	<system.webServer>
 		<validation validateIntegratedModeConfiguration="false" />
-		<rewrite>
-			<rules>
-				<clear />
-				<rule name="login" enabled="true" stopProcessing="true">
-					<match url="^(.*)$" />
-					<action type="Redirect" url="http://alicargo.ru/authentication/login" appendQueryString="true" logRewrittenUrl="false" redirectType="Permanent" />
-					<conditions>
-						<add input="{HTTP_HOST}" pattern="^(login.)(alicargo.ru)$" />
-					</conditions>
-				</rule>
-			</rules>
-		</rewrite>
 	</system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
